@@ -41,8 +41,10 @@
 
   - mailbox_list_mails should use select function for virtual folders!
 
-  - security-updates and Mandriva
-	- http://www.virtualmin.com/bug-tracker/bug?bug%5fnumber=738
+  - theme fixes
+	- consistent left-menu categorization
+	- quota bars on IE
+	- table highlighting
 
-  - disk usage page is ugly - needs tabs?
-
+  - templates for new mailing list configs
+	- http://www.virtualmin.com/bug-tracker/bug?bug%5fnumber=739
