@@ -3022,15 +3022,16 @@ massu_rusure=Are you sure you want to un-install the $1 selected scripts, which 
 massu_rusuredb=Data from $1 databases will also be deleted.
 
 usage_title=Disk Usage
+usage_summaryheader=Summary of disk usage and limits for this virtual server.
 usage_quota=Disk Quota
 usage_squota=Allowed disk quota
 usage_susage=Disk space used
 usage_sdb=Size of databases
 usage_spercent=Percent of quota used
-usage_dirheader=By Directory
+usage_dirheader=Disk usage by files and directories under this server's home.
 usage_dir=Directory
-usage_userheader=By Mail / FTP User
-usage_subheader=By Sub-Server
+usage_userheader=Disk usage by mail / FTP users in this server and all sub-servers.
+usage_subheader=Disk usage by all sub-servers.
 usage_others=Home
 usage_size=Size
 usage_sizegid=Quota Size
@@ -3041,7 +3042,12 @@ usage_max=Only top $1 shown
 usage_total=Total
 usage_dom=Domain
 usage_db=Database
-usage_dbheader=By Database
+usage_dbheader=Disk usage by database in this server and all sub-servers.
+usage_tabsummary=Overview
+usage_tabhomes=Home directory
+usage_tabusers=By user
+usage_tabsubs=By sub-server
+usage_tabdbs=By database
 
 webmin_alog=Apache access log for $1
 webmin_elog=Apache error log for $1
